fix: update gap for questions

--- a/src/index.css
+++ b/src/index.css
@@ -286,6 +286,7 @@ progress {
 }
 
 .side-bar {
+  background: rgba(0, 0, 0, 0.7);
   display: none;
   position: absolute;
   top: 0;
